fix for rectangle misalign and padding problems

--- a/web/hitparade/static/src/less/hit-parade-how-it-works.less
+++ b/web/hitparade/static/src/less/hit-parade-how-it-works.less
@@ -157,5 +157,5 @@
 	letter-spacing: -0.5px;
 	line-height: 1.06;
 	min-width: 50%;
-	position: relative;
+	position: absolute;
 }
