--- a/web/hitparade/static/src/less/hit-parade-section-why.less
+++ b/web/hitparade/static/src/less/hit-parade-section-why.less
@@ -134,3 +134,14 @@ section.hp-why-header-bottom-panel-main {
 	align-items: stretch;
 	align-content: space-around;
 }
+.hp-section-why {
+    .hp-flex;
+    .hp-flex-nowrap;
+    .hp-flex-start;
+    .hp-flex-column;
+    padding-top: 20px;
+    padding-bottom: 20px;
+	height: 600px;
+	background-color: #ffffff;
+	position: relative;
+}
