--- a/web/hitparade/static/src/less/mq.less
+++ b/web/hitparade/static/src/less/mq.less
@@ -3,6 +3,11 @@
     footer.footer {
       padding: 10px;
     }
+    footer.footer {
+        .hp-flex-column;
+        .hp-flex-centered;
+        .hp-flex-wrap;
+    }
     section.hp-hero-overlay-medium-text {
       font-size: 30px;
     }
